--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,18 +13,19 @@
             "servertype": "openocd",
             "interface": "swd",
             "device": "STM32F446RE",
-            "runToMain": true,
-            "preRestartCommands": [
-                "target remote localhost:3333",
-                "add-symbol-file ${workspaceFolderBasename}",
-                "enable breakpoint",
-                "monitor reset"
-            ],
             "armToolchainPath": "/usr/local/gcc-arm-none-eabi-9-2020-q2-update/bin",
             "configFiles": ["/usr/local/share/openocd/scripts/board/st_nucleo_f4.cfg"],
             "searchDir":["/usr/local/share/openocd/scripts/board/"],
             "svdFile": "${workspaceFolder}/etc/STM32F446.svd",
-            "preLaunchTask": "build"
+            "runToMain": true,
+            "preLaunchTask": "build",
+            "preLaunchCommands": [
+                "set mem inaccessible-by-default off",
+                "set verbose off",
+                "monitor arm semihosting enable"
+            ],
+            "showDevDebugOutput":false
+            
         }
     ]
 }
