--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             "armToolchainPath": "/usr/local/gcc-arm-none-eabi-9-2020-q2-update/bin",
             "configFiles": ["/usr/local/share/openocd/scripts/board/st_nucleo_f4.cfg"],
             "searchDir":["/usr/local/share/openocd/scripts/board/"],
-            "svdFile": "${workspaceFolder}/etc/STM32F446.svd",
+            "svdFile": "/usr/local/src/vscodeProj-stm-cpp/etc/STM32F446.svd",
             "runToMain": true,
             "preLaunchTask": "build",
             "preLaunchCommands": [
