--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
         "TARGET_TRIPLET":"arm-none-eabi",
         "STM32_CHIP": "STM32F446RE",
         "STM32Cube_DIR": "/opt/STM32Cube/Repository/STM32Cube_FW_F4_V1.25.0",
-        "STM32_LINKER_SCRIPT":"${workspaceFolder}/src/STM32F446RETX_FLASH.ld"
+        "STM32_LINKER_SCRIPT":"${workspaceFolder}/STM32F446RETX_FLASH.ld"
     },
     "C_Cpp.default.intelliSenseMode": "gcc-arm",
     "cortex-debug.armToolchainPath": "/usr/local/gcc-arm-none-eabi-9-2020-q2-update/bin",
