--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,10 @@
     },
     "cmake.configureSettings": {
         "TOOLCHAIN_PREFIX": "/usr/local/gcc-arm-none-eabi-9-2020-q2-update",
+        "CMAKE_TOOLCHAIN_FILE":"/usr/local/src/stm32-cmake/cmake/gcc_stm32.cmake",
         "TARGET_TRIPLET":"arm-none-eabi",
         "STM32_CHIP": "STM32F446RE",
-        "STM32Cube_DIR": "/opt/STM32Cube/Repository/STM32Cube_FW_F4_V1.25.0",
+        "STM32Cube_DIR": "/opt/STM32Cube/Repository/STM32Cube_FW_F4_V1.25.2",
         "STM32_LINKER_SCRIPT":"${workspaceFolder}/STM32F446RETX_FLASH.ld"
     },
     "C_Cpp.default.intelliSenseMode": "gcc-arm",
