--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,7 @@
         "STM32_TARGET_TRIPLET":"arm-none-eabi",
         "STM32_CHIP": "STM32F446RE",
         "STM32Cube_DIR":"/opt/STM32Cube/Repository/STM32Cube_FW_F4_V1.26.1",
-        "STM32_CUBE_F4_PATH":"/opt/STM32Cube/Repository/STM32Cube_FW_F4_V1.26.1",
-        "STM32_LINKER_SCRIPT":"${workspaceFolder}/STM32F446RETX_FLASH.ld"
+        "STM32_CUBE_F4_PATH":"/opt/STM32Cube/Repository/STM32Cube_FW_F4_V1.26.1"
     },
     "C_Cpp.default.intelliSenseMode": "gcc-arm",
     "cortex-debug.armToolchainPath": "/usr/local/gcc-arm-none-eabi-9-2020-q2-update/bin",
